--- a/less/home-page.less
+++ b/less/home-page.less
@@ -51,10 +51,11 @@
                     margin-top: 13px;
                     min-width:400px;
                     width:30%;
-
+                
                    @media @tablet{
                        min-width:501px;
-                       width:95%;}
+                       width:95%;
+                    }
                    
                    @media @mobile{
                        
