set background and background variable

--- a/less/global.less
+++ b/less/global.less
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     font-family: 'Lato';
     font-style: normal;
+    
 }
 html{
     font-size: 62.5%;
@@ -9,7 +10,7 @@ html{
 body{
     font-family: 'Lato', sans-serif;
     padding: 25px;
-    
+    background-color: @background;
  }
 
 h1, h3, h4 {
