mobile and tablet views

--- a/css/index.css
+++ b/css/index.css
@@ -127,16 +127,15 @@ table {
 }
 * {
   box-sizing: border-box;
-  font-family: 'Lato';
-  font-style: normal;
 }
 html {
   font-size: 62.5%;
 }
 body {
-  font-family: 'Lato', sans-serif;
   padding: 25px;
   background-color: #313036;
+  font-family: 'Lato';
+  font-style: normal;
 }
 h1,
 h3,
@@ -152,17 +151,6 @@ h4 {
 }
 header {
   width: 100%;
-}
-header nav {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-header nav a {
-  margin: 20px 0;
-  font-size: 20px;
-  color: #FFFDF5;
-  text-decoration: none;
 }
 #main h1 {
   width: 100%;
@@ -207,18 +195,8 @@ header nav a {
   .pimg .pic {
     width: 100%;
     margin-top: 13px;
-    /* width: 30%; */
-    /* height: 40%; */
     min-width: 300px;
   }
-}
-.pimg p {
-  border: 2px solid red;
-  margin: 10px 10px;
-  display: flex;
-  align-items: center;
-  font-size: 30px;
-  color: #FFFDF5;
 }
 #signCreate {
   display: flex;
@@ -237,6 +215,7 @@ header nav a {
   padding: 10px;
   margin: 0 auto;
   margin-bottom: 20px;
+  border: 2px solid #FFDD67;
 }
 #signCreate .createAcct {
   width: 50%;
@@ -249,6 +228,7 @@ header nav a {
   color: #FFFDF5;
   padding: 10px;
   margin: 0 auto;
+  border: 2px solid #FFDD67;
 }
 #justBrowse a {
   width: 100%;
@@ -263,6 +243,9 @@ header nav a {
 }
 footer {
   color: #FFFDF5;
+}
+footer p {
+  font-size: 1.5rem;
 }
 #mainAbout .aboutStuff h1 {
   width: 100%;
@@ -286,42 +269,50 @@ footer {
 #mainAbout .listItems p {
   width: 100%;
   text-align: center;
-  font-size: 30px;
+  font-size: 24px;
   color: #FFFDF5;
-}
-#mainAbout ul li {
-  width: 100%;
-  padding: 10px;
-  height: 80%;
-  margin: 20px 10px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  font-size: 30px;
-  color: #FFFDF5;
+  font-family: 'Lato';
 }
 #mainAbout .teamwork img {
   margin-top: 13px;
   margin: 0 auto;
-  width: 30%;
-  height: 40%;
+  padding: 20px;
+  width: 100%;
+  height: auto;
+  max-width: 500px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+#mainAbout .teamwork .teamwork-list {
+  display: flex;
+  flex-direction: column;
 }
 #mainAbout .teamwork h4 {
   width: 100%;
   padding: 10px;
   margin: 20px 10px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  font-size: 30px;
+  font-size: 25px;
+  text-decoration: underline;
+  color: #FFFDF5;
+}
+@media (max-width: 500px) {
+  #mainAbout .teamwork h4 {
+    display: flex;
+    flex-direction: column;
+  }
 }
 #mainAbout .teamwork h4 a {
+  padding: 1rem;
   text-decoration: underline;
   color: #FFFDF5;
 }
 #mainAbout footer {
   color: #FFFDF5;
+}
+#mainAbout p {
+  font-size: 2rem;
 }
