--- a/less/global.less
+++ b/less/global.less
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
-    // font-family: 'Lato';
-    // font-style: normal;
+    font-family: 'Lato';
+    font-style: normal;
     
 }
 html{
